metadata/force-app/main/default/objects/Custom_Object__c/Custom_Object__c.object-meta.xml
<CustomObject>
    <label>Custom Object</label>
    <nameField>
        <label>Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>