metadata/force-app/main/default/objects/Custom_Object__c/fields/custom_object_picklist__c.field-meta.xml
<CustomField>
    <fullName>custom_object_picklist__c</fullName>
    <label>custom object picklist GV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>maybe</fullName>
            </value>
            <value>
                <fullName>yes</fullName>
                <isActive>false</isActive>
                <label>yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>