metadata/force-app/main/default/objects/Custom_Object__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>Custom Object</relationshipLabel>
    <relationshipName>Custom_Object</relationshipName>
    <type>Lookup</type>
</CustomField>