metadata/force-app/main/default/objects/Custom_Object__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <externalId>true</externalId>
    <label>test</label>
    <length>40</length>
    <type>Text</type>
</CustomField>