metadata/force-app/main/default/objects/Custom_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>custom_object_picklist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>